--- a/src/SiGen/Lang/Help.resx
+++ b/src/SiGen/Lang/Help.resx
@@ -98,15 +98,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ScaleLengthMode_Help" xml:space="preserve">
-    <value>Choose the scale length mode</value>
+    <value>Choose the scale length mode:
+• **Single**: A single scale length for all strings.
+• **Multiscale**: A separate scale length for treble and bass strings.
+• **Per-string**: A separate scale length for each string.</value>
   </data>
-  <data name="ScaleLengthMode_Single_Help" xml:space="preserve">
-    <value>A single scale length for all strings.</value>
-  </data>
-  <data name="ScaleLengthMode_Multiscale_Help" xml:space="preserve">
-    <value>A separate scale length for treble and bass strings.</value>
-  </data>
-  <data name="ScaleLengthMode_PerString_Help" xml:space="preserve">
-    <value>A separate scale length for each string.</value>
+  <data name="BassTrebleSkew_Help" xml:space="preserve">
+    <value>Sets the amount of skew between bass and treble strings.
+Use this to create fanned frets even when all strings share the same scale length.
+Positive values angle the frets one way, negative values the other. Leave blank for no skew.</value>
   </data>
 </root>
