--- a/src/SiGen/Lang/Resources.es.resx
+++ b/src/SiGen/Lang/Resources.es.resx
@@ -201,10 +201,16 @@
   <data name="InstrumentType.Custom" xml:space="preserve">
     <value>Personalizado</value>
   </data>
-  <data name="InstrumentFamilly.Bass" xml:space="preserve">
+  <data name="InstrumentFamily.Bass" xml:space="preserve">
     <value>Bajo</value>
   </data>
-  <data name="InstrumentFamilly.Guitar" xml:space="preserve">
+  <data name="InstrumentFamily.Guitar" xml:space="preserve">
     <value>Guitarra</value>
+  </data>
+  <data name="Editor.NumberOfFrets" xml:space="preserve">
+    <value>Número de trastes</value>
+  </data>
+  <data name="Editor.BassTrebleSkew" xml:space="preserve">
+    <value>Inclinación</value>
   </data>
 </root>
